# cybersheild-mvp

./: .gitignore  Hackathon_Analysis_Report.md  VisuLaundNet_Technical_Architecture.md  index.html  start.bat  start.sh
TriNetra/: package-lock.json  requirements-minimal.txt  requirements.txt  test_network.html
TriNetra/backend/: .env.example  app.py  config.py
TriNetra/backend/api/: ai_api.py  autosar_api.py  chronos_api.py
TriNetra/backend/data/: synthetic_generator.py  transactions.db
TriNetra/frontend/: autosar.html  chronos.html  dashboard.html  hydra.html  index.html  login.html  manifest.json  package-lock.json  package.json  sw.js  test_frontend.html  vite.config.js
TriNetra/frontend/css/: chronos.css  main.css  responsive.css
TriNetra/frontend/js/: ai-api.js  api.js  app.js  autosar-enhanced.js  autosar-page.js  autosar.js  chronos-page.js  chronos.js  hydra-enhanced.js  hydra-page.js  hydra.js  main.js  pdf-generator.js  sar-map.js  utils.js
backend/: pyproject.toml  requirements.txt
backend/data/: transactions.db
backend/data/data/: test_transactions.db
frontend/: index.html  vite.config.js
frontend/css/: design-system.css
frontend/js/: api.js  autosar-enhanced.js  hydra-enhanced.js  sar-map.js  utils.js
frontend/tests/: test_network_validation.js
