[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faker==19.6.2",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "matplotlib==3.7.2",
    "numpy>1.25.2",
    "pandas>=2.2.0",
    "plotly==5.16.1",
    "python-dateutil==2.8.2",
    "scikit-learn==1.3.0",
    "seaborn==0.12.2",
]
